<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="#40c5b6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 />

            <EditText
                android:id="@+id/enterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/entername"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mobileInput"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/mobile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     />

                <EditText
                    android:id="@+id/enterMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/entermobile"
                    android:inputType="phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sizeInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:text="@string/size"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         />

                    <EditText
                        android:id="@+id/enterSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/people"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/tdInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="cursive"
                        android:text="@string/td"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         />

                    <EditText
                        android:id="@+id/editTextDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editTextTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/smokeBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/smoke"
                             />

                    </LinearLayout>

                    <Button
                        android:id="@+id/confirmButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cfm"
                         />

                    <Button
                        android:id="@+id/resetButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rst"
                       />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
